--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ ml-dtypes==0.4.1
 namex==0.0.8
 narwhals==1.23.0
 nest-asyncio==1.6.0
-numpy==1.23.5
+numpy>=1.26.0
 openpyxl==3.1.5
 opt_einsum==3.4.0
 optree==0.14.0
